# videocaster

./: .gitattributes  .gitignore  Cargo.toml  README.md  Release.toml  app.rc  build.rs  build.sh  run.ps1  run.sh  rustfmt.toml
.github/workflows/: audit.yml  build.yml  rust.yml
dpkg/DEBIAN/: control
installer/: .gitignore  VideocasterInstaller.vdproj
src/: app_result.rs  bindings.rs  common.rs  frame.rs  fs.rs  ip.rs  main.rs  opensubs.rs  static_files.rs  subtitles.rs  video.rs
src/chromecast/: mod.rs  range.rs  subtitles.rs  video.rs
src/subtitles/: by_metadata.rs  by_path.rs  mod.rs
ui/: .gitignore  App.svelte  bundle.css  index.css  index.html  index.js  index.ts  rollup.config.js  tsconfig.json
ui/public/: index.html
ui/src/: App.svelte  MuteButton.svelte  SeekBar.svelte  SubtitlePicker.svelte  VolumeBar.svelte  index.ts
www/: .gitignore  package-lock.json  package.json  rollup.config.js  tsconfig.json
www/public/: index.html  site.webmanifest
www/src/: App.svelte  FileList.svelte  IconButton.svelte  MuteButton.svelte  PlayButton.svelte  Range.svelte  SeekBar.svelte  encoding.ts  index.css  index.ts  server.ts
www/src/states/: FilePicker.svelte  SubtitlesPicker.svelte  VideoPlayer.svelte  VideoPlayerView.svelte
