[package]
name = "videocaster"
version = "1.0.3"
authors = ["jbfp <jakob@jbfp.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
bytes = "1.0"
directories-next = "2.0.0"
dunce = "1.0.1"
flate2 = "1.0"
futures = "0.3.9"
lazy_static = "1.4"
log = "0.4"
packer = "0.5.3"
percent-encoding = "2.1.0"
pretty_env_logger = "0.4"
regex = "1"
reqwest = { version ="0.11.0", features = ["json"] }
rocket = "0.5.0-dev"
rocket_contrib = { version = "0.5.0-dev", default-features = false, features = ["json"] }
rocket_cors = { version = "0.5.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-logging = "2.0.2"
thiserror = "1.0.23"
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows = "0.2.1"

[target.'cfg(windows)'.build-dependencies]
windows = "0.2.1"

[dev-dependencies]
test-case = "1.1.0"

[patch.crates-io]
rocket = { git = 'https://github.com/SergioBenitez/Rocket', branch = "master" }
rocket_contrib = { git = 'https://github.com/SergioBenitez/Rocket', branch = "master" }
rocket_cors = { git = "https://github.com/GeorgeScrivener/rocket_cors.git", branch = "get-param-renamed" }
