[package]
name = "videocaster"
version = "1.0.3"
authors = ["jbfp <jakob@jbfp.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
bytes = "1.0.1"
color-backtrace = "0.5.1"
directories-next = "2.0.0"
dunce = "1.0.2"
flate2 = "1.0.20"
futures = "0.3.16"
lazy_static = "1.4.0"
log = "0.4.14"
packer = "0.5.3"
percent-encoding = "2.1.0"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master", default_features = false }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
simple-logging = "2.0.2"
thiserror = "1.0.26"
tokio = { version = "1.10.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows = "0.19.0"

[target.'cfg(windows)'.build-dependencies]
windows = "0.19.0"

[dev-dependencies]
test-case = "1.2.0"
