[package]
name = "videocaster"
version = "1.2.0"
authors = ["jbfp <jakob@jbfp.dk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
bytes = "1.1.0"
color-backtrace = "0.5.1"
directories-next = "2.0.0"
dunce = "1.0.2"
flate2 = "1.0.22"
futures = "0.3.19"
lazy_static = "1.4.0"
log = "0.4.14"
packer = "=0.5.3"
packer_derive = "=0.5.3"
percent-encoding = "2.1.0"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
reqwest = { version = "0.11.8", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master", default_features = false }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.74"
simple-logging = "2.0.2"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.33", features = ["Win32_System_Power"] }

[dev-dependencies]
test-case = "1.2.1"

[profile.release]
debug = 1
lto = "fat"
